# opencv

c++/opencv.org-computer-vision-1-introduction/image-as-a-matrix/: main.cpp
c++/opencv.org-computer-vision-1-introduction/images-with-alpha-channel/: CMakeLists.txt
c++/opencv.org-computer-vision-1-introduction/week1/1.getting-started-with-images/1.image-as-a-matrix/: CMakeLists.txt
c++/opencv.org-computer-vision-1-introduction/week1/1.getting-started-with-images/2.images-with-alpha-channel/: main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/2.basic-image-operations/1.create-new-images/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/2.basic-image-operations/2.cropping-an-image-section/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/2.basic-image-operations/3.copying-a-region-to-another/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/2.basic-image-operations/4.resizing-an-image/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/2.basic-image-operations/5.creating-an-image-mask/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/3.mathematical-operations-on-images/1.datatype-conversion/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/3.mathematical-operations-on-images/2.contrast-enhancement/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/3.mathematical-operations-on-images/3.brightness-enhancement/: CMakeLists.txt  main.cpp
c++/opencv.org-computer-vision-1-introduction/week1/3.mathematical-operations-on-images/4.pitfalls-of-using-uint8/: CMakeLists.txt  main.cpp
(+2 files in other folders)
